--- a/src/main/resources/templates/client.html
+++ b/src/main/resources/templates/client.html
@@ -30,7 +30,7 @@
 
                     <div class="row">
                         <div class="col-md-6 animate fadeIn">
-                            <img th:src="@{'/administration/users/' + *{user.id} + '/photo/download'}" alt="about-me"
+                            <img th:src="@{'/users/' + *{user.id} + '/photo/download'}" alt="about-me"
                                  class="margin-top-10"/>
                             <ul class="list-inline about-me-icons margin-vert-20">
                                 <li>
