--- a/src/main/resources/templates/tutor.html
+++ b/src/main/resources/templates/tutor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="ru">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4" lang="ru">
 <head>
     <title>Репетиторы</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
