--- a/src/main/resources/templates/fragments/login_form.html
+++ b/src/main/resources/templates/fragments/login_form.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div th:fragment="login_form">
-    <div class="col-md-6">
+    <div class="login-form">
         <div class="signup-page right-block">
             <div class="signup-header">
                 <h3>Email и пароль</h3>
