--- a/src/main/resources/templates/administration/client/new.html
+++ b/src/main/resources/templates/administration/client/new.html
@@ -31,101 +31,16 @@
                 <form data-bind="submit: save" th:object="${client}" th:action="@{/clients}" method="POST">
                     <h3>Для того чтобы начать занятия с репетитором необходимо сначала зарегистрироваться.</h3>
 
-                    <div th:replace="fragments/user_form :: user_form"></div>
-
-                    <div th:replace="fragments/login_form :: login_form"></div>
-
                     <div class="col-md-6">
-                        <div class="signup-page">
-                            <div class="signup-header">
-                                <h3>Личные данные родителя (для дошкольников и школьников)</h3>
-                            </div>
+                        <div th:replace="fragments/user_form :: user_form"></div>
 
-                            <div class="row">
-                                <label>Фамилия</label>
-                                <input class="form-control margin-bottom-20" type="text"
-                                       th:field="*{clientParent.lastName}" maxlength="100"/>
-                            </div>
+                        <div th:replace="fragments/login_form :: login_form"></div>
 
-                            <div class="row">
-                                <label>Имя</label>
-                                <input class="form-control margin-bottom-20" type="text"
-                                       th:field="*{clientParent.firstName}" maxlength="100"/>
-                            </div>
-
-                            <div class="row">
-                                <label>Отчество</label>
-                                <input class="form-control margin-bottom-20" type="text"
-                                       th:field="*{clientParent.secondName}" maxlength="100"/>
-                            </div>
-                            <div class="row">
-                                <label>Номер телефона</label>
-                                <input class="form-control margin-bottom-20" type="text" th:field="*{clientParent.phoneNumber}"
-                                        maxlength="20"/>
-                            </div>
-                        </div>
                     </div>
 
-                    <div class="col-md-6">
-                        <div class="signup-page right-block">
-                            <div class="signup-header">
-                                <h3>Данные для обучения</h3>
-                            </div>
-                            <div class="row">
-                                <input type="checkbox"
-                                       data-bind="click: $root.changeClientType(1)" th:field="*{clientType}" th:value="1"/>
-                                <label class="">Дошкольник</label>
-                            </div>
-                            <div class="row">
-                                <input type="checkbox" data-bind="click: $root.changeClientType(2)" th:field="*{clientType}" th:value="2"/>
-                                <label class="">Школьник</label>
-                            </div>
-                            <div class="row">
-                                <input data-bind="click: $root.changeClientType(3)" type="checkbox" th:field="*{clientType}" th:value="3"/>
-                                <label class="">Студент</label>
-                            </div>
-                            <div class="row">
-                                <input data-bind="click: $root.changeClientType(4)" type="checkbox" th:field="*{clientType}" th:value="4"/>
-                                <label class="">Взрослый</label>
-                            </div>
-                            <div class="row">
-                                <label>Класс
-                                    <span class="color-red">*</span>
-                                </label>
-                                <select id="genderSelect" class="form-control margin-bottom-20"
-                                        data-bind="value: grade, attr : {'disabled' : isGradeDisabled}" name="course"
-                                        th:field="*{course}">
-                                    <option value=""></option>
-                                    <option th:each="i : ${#numbers.sequence(1, 11)}" th:value="${i}" th:text="${i}">Класс</option>
-                                </select>
-                            </div>
-                            <div class="row">
-                                <label>Школа
-                                    <span class="color-red">*</span>
-                                </label>
-                                <input class="form-control margin-bottom-20" type="text" th:text="*{institutionOfEducation}"
-                                       data-bind="attr : {'disabled' : isGradeDisabled}" maxlength="100"/>
-                            </div>
-                            <div class="row">
-                                <label>Курс
-                                    <span class="color-red">*</span>
-                                </label>
-                                <select id="genderSelect" class="form-control margin-bottom-20"
-                                        data-bind="value: course, attr : {'disabled' : isCourseDisabled}" name="course"
-                                        th:field="*{course}">
-                                    <option value=""></option>
-                                <option th:each="i : ${#numbers.sequence(1, 5)}" th:value="${i}" th:text="${i}">Курс</option>
-                                </select>
-                            </div>
-                            <div class="row">
-                                <label>Университет и специальность
-                                    <span class="color-red">*</span>
-                                </label>
-                                <input class="form-control margin-bottom-20" type="text" th:text="*{institutionOfEducation}"
-                                       data-bind="attr : {'disabled' : isCourseDisabled}" maxlength="100"/>
-                            </div>
-                        </div>
+                    <div th:replace="fragments/client/update:: update"></div>
 
+                    <div class="col-md-6">
                         <hr/>
                         <div class="row">
                             <div class="col-lg-4 text-right">
@@ -133,16 +48,15 @@
                             </div>
                         </div>
                     </div>
-
-                    </form>
-                </div>
+                </form>
             </div>
         </div>
     </div>
+</div>
 
-    <div th:replace="fragments/footer :: contacts"></div>
+<div th:replace="fragments/footer :: contacts"></div>
 
-    <div th:replace="fragments/footer :: footer"></div>
+<div th:replace="fragments/footer :: footer"></div>
 <script th:src="@{/js/jquery.min.js}"/>
 <script th:src="@{/js/jquery-ui.min.js}"/>
 <script th:src="@{/js/moment.min.js}"/>
@@ -167,10 +81,10 @@
 
 <script th:inline="javascript">
     $(function () {
-        ko.applyBindings(new User());
+        ko.applyBindings(new User([[${client}]]));
     });
 
-    $('input[type="checkbox"]').on('change', function() {
+    $('input[type="checkbox"]').on('change', function () {
         $('input[type="checkbox"]').not(this).prop('checked', false);
     });
 </script>
