--- a/src/main/resources/templates/administration/tutor/new.html
+++ b/src/main/resources/templates/administration/tutor/new.html
@@ -29,123 +29,19 @@
             <div class="row margin-vert-30">
                 <form data-bind="submit: save" th:object="${tutor}" th:action="@{/tutors}" method="POST">
 
-                    <div th:replace="fragments/user_form :: user_form"></div>
-
                     <div class="col-md-6">
-                        <div class="signup-page right-block">
-                            <div class="signup-header">
-                                <h3>Профессиональные данные</h3>
-                            </div>
-                            <div class="row">
-                                <label>Образование
-                                    <span class="color-red">*</span>
-                                    <p> Если вы имеете высшее образование, то укажите место и год в которым Вы получили высшее образование.
-                                        Если Вы студент укажите место обучения и курс на дыннй момент</p>
-                                </label>
-                                <input class="form-control margin-bottom-20" type="text" data-bind="value: education"
-                                       th:field="*{education}"/>
-                            </div>
-                            <div class="row">
-                                <label>Опыт работы
-                                    <p>Год в котором Вы впервые занялись репетиторством.
-                                        Если для Вас это первый опыт, то пропустить это поле</p>
-                                </label>
-                                <input class="form-control margin-bottom-20" type="text"
-                                       data-bind="value: firstExperience"
-                                       th:field="*{firstExperience}"/>
-                            </div>
-                            <div class="row">
-                                <label>Средняя цена за занятие
-                                    <span class="color-red">*</span>
-                                    <p> Некоторые репетиторы берут разные суммы за
-                                        занятия в зависимости от продолжительности.
-                                        Вычислите среднее арифметическое стоимости за занятие
-                                    </p>
-                                </label>
-                                <input class="form-control margin-bottom-20" type="text" data-bind="value: price"
-                                       th:field="*{price}"/>
-                            </div>
-                            <div class="row">
-                                <label>Предметы
-                                    <span class="color-red">*</span>
-                                </label>
-                                <select class="form-control margin-bottom-20 selectpicker" multiple="multiple" th:field="*{subjects}"
-                                        title="Выберите предметы" data-selected-text-format="count > 3">
-                                    <option th:each="sub,row : ${subjects}"
-                                            th:value="${sub.id}"
-                                            th:text="${sub.name}"></option>
-                                </select>
-                            </div>
-                            <div class="row margin-top-20">
-                                <label>Вид занятий
-                                    <span class="color-red">*</span>
-                                    <p>Выберите виды занятий которые Вы практикуете</p>
-                                </label>
-                                <div th:each="lessonType : ${lessonTypes}">
-                                    <input type="checkbox" th:field="*{lessonTypes}" th:value="${lessonType.id}" />
-                                    <label th:text="${lessonType.name}"></label>
-                                </div>
-                            </div>
-                        </div>
+                        <div th:replace="fragments/user_form :: user_form"></div>
+
+                        <div th:replace="fragments/login_form :: login_form"></div>
+
+                        <div th:replace="fragments/tutor/status :: status"></div>
                     </div>
 
-                    <div th:replace="fragments/login_form :: login_form"></div>
+                    <div th:replace="fragments/tutor/update :: update"></div>
+
+                    <div th:replace="fragments/tutor/social :: social"></div>
 
                     <div class="col-md-6">
-                        <div class="signup-page right-block">
-                            <div class="signup-header">
-                                <h3>Социальные сети</h3>
-                            </div>
-                            <div class="row">
-                                <label>Вконтакте
-                                    <p>Рекомендуется заполнить это поле, для удобства коммуникации с клиентам.
-                                        Ссылка будет видна только Вашим клиентам.</p>
-                                </label>
-                                <input class="form-control margin-bottom-20" type="text" data-bind="value: vkLink"
-                                       th:field="*{vkLink}"/>
-                            </div>
-                            <div class="row">
-                                <label>Skype
-                                    <p>Если Вы проводите занятий по skype, то обязательно заполните это поле.
-                                    Если же нет, то рекомендуется его заполнить для коммуникации с клиентом.
-                                    Ссылка будет видна только Вашим клиентам.</p>
-                                </label>
-                                <input class="form-control margin-bottom-20" type="text" data-bind="value: skypeLink"
-                                       th:field="*{skypeLink}"/>
-                            </div>
-                            <div class="row">
-                                <label>Telegram
-                                    <p>Укажите Ваш логин в telegram, подписавшись на нашего бота Вы сможете узнавать список Ваших ближайших
-                                    занятий, узнавать количество проведенных занятий в этом месяце и многое другое.</p>
-                                </label>
-                                <input class="form-control margin-bottom-20" type="text" data-bind="value: skypeLink"
-                                       th:field="*{skypeLink}"/>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6">
-                        <div class="signup-page right-block">
-                            <div class="signup-header">
-                                <h3>Дополнительная информация</h3>
-                            </div>
-                            <div class="row">
-                                <label>О себе
-                                    <p>Здесь Вы можете указать любую информацию о себе, которую вы еще не указали при заполнении профиля</p>
-                                </label>
-                                <textarea class="form-control margin-bottom-20" rows="4" data-bind="value: comment"
-                                          th:field="*{comment}"></textarea>
-                            </div>
-                            <div class="row">
-                                <label>Статус
-                                    <p>Статус будет отображаться в Вашем профиле и будет виден всем.
-                                        Порой одной фразой можно сказать много и клиенту cможет сложить о Вас кое-какое впечатление
-                                        уже на этапе просмотра Вашего профиля</p>
-                                </label>
-                                <input class="form-control margin-bottom-20" type="text" data-bind="value: status"
-                                       th:field="*{status}"/>
-                            </div>
-                        </div>
                         <hr/>
                         <div class="row">
                             <div class="col-lg-4 text-right">
@@ -186,8 +82,9 @@
 
 <script th:inline="javascript">
     $(function () {
-        ko.applyBindings(new User());
+        ko.applyBindings(new User([[${tutor}]]));
     });
 </script>
+
 </body>
 </html>
