--- a/src/main/resources/templates/fragments/tutor/social.html
+++ b/src/main/resources/templates/fragments/tutor/social.html
@@ -34,7 +34,7 @@
                         занятий, узнавать количество проведенных занятий в этом месяце и многое другое.</p>
                 </label>
                 <input class="form-control margin-bottom-20" type="text" data-bind="value: skypeLink"
-                       th:field="*{skypeLink}"/>
+                       th:field="*{telegram}"/>
             </div>
         </div>
     </div>
