--- a/src/main/resources/templates/tutor.html
+++ b/src/main/resources/templates/tutor.html
@@ -86,7 +86,7 @@
 
                             <div>
                                 <b>Цена за занятие:</b>
-                                <span type="span" class="label label-primary" th:text="${price}"></span>
+                                <span type="span" class="label label-primary" th:text="*{price}"></span>
                             </div>
                             <div>
                                 <b>Типы занятий:</b>
@@ -94,7 +94,54 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+
+                    <div class="col-md-12">
+                        <div th:each="relation : ${relations}">
+                            <hr/>
+                            <div class="row">
+                                <div class="col-md-1 margin-vert-20">
+                                    <i class="fa-user fa-3x color-primary"></i>
+                                </div>
+                                <div class="col-md-11 margin-vert-30">
+                                    <h3>Ученик <a th:text="${relation.client.user.getFullName()}"
+                                                     th:href="@{'/clients/' + ${relation.client.id}}"></a></h3>
+                                </div>
+                            </div>
+                            <div class="row"  th:if="!${#lists.isEmpty(relation.historyLessons)}">
+                                <div class="col-md-1 margin-vert-20">
+                                    <i class="fa-home fa-3x color-primary"></i>
+                                </div>
+
+                                <div class="col-md-11 margin-vert-30">
+                                    <h3 class="panel-title" th:text="${'Домашнее задание: ' + relation.historyLessons[0].homework}"></h3>
+                                </div>
+                            </div>
+                            <div class="row" th:if="!${#lists.isEmpty(relation.historyLessons)}">
+                                <div class="col-md-1 margin-vert-20">
+                                    <i class="fa-list fa-3x color-primary"></i>
+                                </div>
+
+                                <div class="col-md-11 margin-vert-30">
+                                    <h3 >
+                                        История занятий
+                                        <a th:href="@{'/relations/' + ${relation.id} + '/history'}">Просмотреть</a></h3>
+                                </div>
+
+                                <div class="col-md-1 margin-vert-20">
+                                    <i class="fa-list fa-3x color-primary"></i>
+                                </div>
+
+                                <div class="col-md-11 margin-vert-30">
+                                    <h3 >
+                                         <p th:text= "'Проведено занятий ' + ${#lists.size(relation.historyLessons)}"></p>
+                                    </h3>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div sec:authorize="${hasRole('CLIENT')}" class="row">
                         <div class="col-lg-12 text-right">
                             <a th:href="@{*{id} + '/order'}" class="btn btn-default">Заказать</a>
                         </div>
@@ -105,6 +152,8 @@
                             <a th:href="@{'/tutors/' + *{id} + '/edit'}" class="btn btn-default">Редактировать данные</a>
                         </div>
                     </div>
+
+
 
                     <!--<div class="row">-->
                         <!--<h3 class="padding-top-10 pull-left">-->
@@ -135,7 +184,7 @@
                     <hr/>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 animate fadeIn" th:if="!${evaluation.id == null or evaluation.id == null}">
+                        <div class="col-md-6 animate fadeIn" th:if="${evaluation != null}">
                             <!-- My Skills -->
                             <h3 class="margin-bottom-10">Рейтинг</h3>
                             <h3 class="progress-label">Средняя оценка за занятие
@@ -174,7 +223,7 @@
                     </div>
                     <div class="col-md-9">
 
-                        <div class="blog-item" th:if="!*{#strings.isEmpty(notes)}">
+                        <div class="blog-item" th:if="!*{#lists.isEmpty(notes)}">
                             <div class="clearfix"></div>
                             <div class="blog-item-footer">
 
